@@ -258,5 +258,4 @@ var free_space = 0;
 var used_space = 0;
 var perc_space = 0;
 
-
-
+var isPause = 0; //used by pause routine.
