@@ -5,7 +5,10 @@ VDR 1.7.29
 
 0.21	Language in sepate file, link your lang_XXX.js to language.js to activate it.
 	Updated EPG filter, (DVB-T defaults to German)
-	Audio, subs etc settings are now stored on the box. So they are kept after reboot. 
+	Audio, subs etc settings are now stored on the box. So they are kept after reboot.
+	OSD Time out can be set from settings.js
+	Pause Live TV on Server
+
 
 
 0.20	Updated EPG filter
